--- a/meineWebseite/startseite.html
+++ b/meineWebseite/startseite.html
@@ -6,15 +6,15 @@
         <meta name="description" content="Das ist ein ganz einfaches, gültiges HTML-Dokument">
 	</head>
 	<body style="background-color: #64c8c8;">
-		<h1 style="font-family: Calibri; font-size: 50px; text-align: center;">Webshop</h1>
+		<h1 style="font-family: Calibri; font-size: 50px; text-align: center;">Hallo du hast meine Webseite gefunden!</h1>
 		<img src="img/welcome.jpg" alt="Welcome" height="200" style="display: block;margin: 0px auto;">
 		<hr>
 		<ul>
 			<li>
-				<a href="shop/shop.html" target="_self">Hier geht's zum Shop</a>
+				<a href="shop/shop.html" target="_self">Shop</a>
 			</li>
 			<li>
-				<a href="produkte/produkte.html" target="_self">Hier sind all unsere Produkte</a>
+				<a href="produkte/produkte.html" target="_self">Produkte</a>
 			</li>
 			<li>
 				<a href="kontakt/kontakt.html" target="_self">Kontakt</a>
